footer by react added.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
 
-<div id="header"></div>
-<div id="app"></div>
+<!--<div id="header"></div>-->
+<!--<div id="app"></div>-->
 <div id="footer"></div>
 <script type="text/babel">
 // <!--    // ReactDOM.render(<MenuSection />, document.getElementById('menu'));-->
