body and header added. With bugs in style.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-    <title>restaurant info</title>
+    <title>Loghmeh</title>
     <!--==================================================================================-->
     <link rel='stylesheet' type='text/css'
           href='https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css'>
@@ -11,8 +11,8 @@
     <!--==================================================================================-->
     <link rel="stylesheet"  href="font/flaticon.css">
     <!--==================================================================================-->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet"  href="css/index.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/index.css" media="all"/>
     <meta charset="UTF-8">
     <meta name="author" content="Leila Fakheri, Mahya Gheini">
     <meta name="viewport" content="width=device-width, initial-scale=1">
