--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,8 @@
     <div id="app"></div>
     <div id="footer"></div>
     <script type="text/babel">
+        import {MenuSection} from "./js/content";
+        import {FooterSection} from "./js/content";
         ReactDOM.render(<MenuSection />, document.getElementById('header'));
         ReactDOM.render(<BodySection />, document.getElementById('app'));
         ReactDOM.render(<FooterSection />, document.getElementById('footer'));
